# python-htmligator

./: .gitignore  Makefile  README.md  pyproject.toml  release.env  renovate.json  sonar-project.properties
.github/: renovate.json  renovate.json5
.github/workflows/: build.yaml  deploy-github-release-assets.yml  deploy-pypi.yml  quality-sonarcloud.yml  renovate.yml
scripts/: set-version.sh
src/htmligator/: cli.py  exception.py  html.py  htmligator.py  util.py
tests/: test_cli.py  test_html.py  test_htmligator.py  test_util.py
tests/expected-output/: cli-help.txt  cli-version.txt  cli-wrong-options.txt  generate_html_files_file_0.txt  generate_html_files_file_1.txt
tests/test-data/sample1/a3/: a13.txt  a5.txt  b88.txt  b9.txt
tests/test-data/sample1/b1/: a54000.txt  a6000.txt  b3322.txt  b967.txt
