[project]
name = "htmligator"
version = "0.8.3"
description = "generate wrapper html files to navigate folder contents"
authors = [
    {name = "Siak Hooi",email = "siakhooi@gmail.com"}
]
keywords = [ "downloader" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities"
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "natsort (>=8.4.0,<9.0.0)"
]

[project.urls]
homepage = "https://github.com/siakhooi/python-htmligator"
repository = "https://github.com/siakhooi/python-htmligator"
documentation = "https://github.com/siakhooi/python-htmligator/wiki"
"Bug Tracker" = "https://github.com/siakhooi/python-htmligator/issues"

[project.scripts]
htmligator = 'htmligator.cli:run'


[tool.poetry]
packages = [{include = "htmligator", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
flake8 = "^7.2.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
