[project]
name = "htmligator"
version = "0.11.0"
description = "generate wrapper html files to navigate folder contents"
authors = [
    {name = "Siak Hooi",email = "siakhooi@gmail.com"}
]
keywords = [ "downloader" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities"
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "natsort (>=8.4.0,<9.0.0)"
]

[project.urls]
homepage = "https://github.com/siakhooi/htmligator"
repository = "https://github.com/siakhooi/htmligator"
documentation = "https://github.com/siakhooi/htmligator/wiki"
"Bug Tracker" = "https://github.com/siakhooi/htmligator/issues"

[project.scripts]
htmligator = 'htmligator.cli:run'


[tool.poetry]
packages = [{include = "htmligator", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
flake8 = "^7.2.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
